# cppbrasil

./: .gitignore  README.md
CppBrasil/: ConvDF  CppUtil  code128.cpp  code128.h  config.cpp  config.h  container.h  convdf.h  cppbarcode.cpp  cppbarcode.h  cppbrasil_global.h  cppcrypto.cpp  cppcrypto.h  cppdanfe.cpp  cppdanfe.h  cpplibxml2.cpp  cpplibxml2.h  cppopenssl.cpp  cppopenssl.h  cppqrcode.cpp  cppqrcode.h  cpputility.cpp  cpputility.h  cppxml.h  cppzip.cpp  cppzip.h  httpclient.cpp  httpclient.h  httpopenssl.cpp  httpopenssl.h  httpqt.cpp  httpqt.h  qrcodegen.cpp  qrcodegen.hpp  webservices.cpp  webservices.h
CppBrasil/DanfeQtRPT/: CMakeLists.txt  CppDanfeQtRPT  cppdanfeqtrpt.cpp  cppdanfeqtrpt.h  cppdanfeqtrpt.pro  cppdanfeqtrpt_p.h
CppBrasil/NFe/: .directory  CMakeLists.txt  ConfigNFe  ConvNF  CppNFe  CppNFe.pro  adi.h  arma.cpp  arma.h  autxml.h  avulsa.cpp  avulsa.h  cana.cpp  cana.h  card.cpp  card.h  cide.h  cobr.h  cofins.cpp  cofins.h  cofinsst.cpp  cofinsst.h  comb.cpp  comb.h  compra.cpp  compra.h  confignfe.cpp  confignfe.h  conssitnfe.cpp  conssitnfe.h  convnf.cpp  convnf.h  cppnfe.cpp  cppnfe.h  deduc.cpp  deduc.h  dest.cpp  dest.h  det.h  detexport.h  (+116 more)
doc/: .$Container.drawio.bkp  Container.drawio  CppNFe-NotaFiscal.drawio
examples/: nota.cpp  nota.h
examples/QtCon-2022/: nota.cpp  nota.h
examples/QtCon-2022/QuickNFe/: CMakeLists.txt  main.cpp  main.qml
examples/QtCon-2022/QuickNFe/android/: AndroidManifest.xml  build.gradle  gradle.properties
examples/QtCon-2022/RestNFe/Server/RestNFe/: CMakeLists.txt
examples/QtCon-2022/RestNFe/Server/RestNFe/src/: CMakeLists.txt  restnfe.cpp  restnfe.h  root.cpp  root.h
examples/QtCon-2022/RestNFe/client/ClientNFe/: CMakeLists.txt  main.cpp  main.qml
examples/QtCon-2022/WidgetsDANFE/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
examples/WidgetsDANFE/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
examples/WidgetsNFe/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
examples/consoleNFe/: CMakeLists.txt  main.cpp
examples/report/: DANFE-NFCe.xml  DANFE-NFe.xml
installer/: MakeLinux.sh  MakeMSVC.bat
manual/: style.txt
src/: config.cpp  config.h  convdf.cpp  convdf.h  cppbrasil.pro  cppbrasil_global.h  cppcrypto.h  cpplibxml2.cpp  cpplibxml2.h  cppopenssl.cpp  cppopenssl.h  cpputility.h  cppxml.cpp  cppxml.h  cppzip.h  httpclient.cpp  httpclient.h  httpopenssl.cpp  httpopenssl.h  httpqt.cpp  httpqt.h  webservices.cpp  webservices.h
src/cppnfe/: CMakeLists.txt  adi.cpp  adi.h  arma.h  autxml.cpp  autxml.h  avulsa.h  cana.h  card.h  cide.cpp  cide.h  cobr.cpp  cobr.h  cofins.h  cofinsst.h  comb.cpp  comb.h  compra.h  confignfe.h  convnf.h  cppnfe.cpp  cppnfe.h  cppnfe.pro  deduc.h  dest.h  det.cpp  det.h  detexport.cpp  detexport.h  detpag.cpp  detpag.h  di.h  dup.cpp  dup.h  emit.h  encerrante.h  enderdest.cpp  enderdest.h  enderemit.h  entrega.h  (+86 more)
src/cppnfe/bakcup_estilo_2/: conv.h  cppnfe.cpp  cppnfe.h  cppnfe_p.h  ide.cpp  ide.h  infnfe.cpp  infnfe.h  nfref.cpp  nfref.h
src/danfe/: barcode128.cpp  barcode128.h  code128.cpp  code128.h  code128_const.h  cppdanfe.cpp  cppdanfe.h
src/danfe/cppdanfeqtrpt/: cppdanfeqtrpt.cpp  cppdanfeqtrpt.h  cppdanfeqtrpt.pro  cppdanfeqtrpt_p.h
utility/: MakeLinux.sh
